@@ -28,7 +28,7 @@
 
 #include "ace/OS_NS_signal.h"
 
-// Type of the extended signal handler.
+/// Type of the extended signal handler.
 typedef void (*ACE_Sig_Handler_Ex) (int, siginfo_t *siginfo, ucontext_t *ucontext);
 
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
