@@ -1,3 +1,11 @@
+Mon Nov 12 13:34:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Sig_Adapter.cpp:
+          Fixed coverity errors
+
+        * ace/Signal.h:
+          Doxygen change
+
 Mon Nov 12 12:19:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_Thread.inl:
